--- a/Documentation/form-examples/demo.html
+++ b/Documentation/form-examples/demo.html
@@ -48,8 +48,10 @@
             border-top: 0.1em solid gray;
             padding: 1em;
         }
-    </style>
-    <script type="text/javascript" src="https://solid.github.io/mashlib/dist/mashlib.js"></script>
+    </style><!--
+    <script type="text/javascript" src="https://solid.github.io/mashlib/dist/mashlib.js"></script> -->
+    <script type="text/javascript" src="https://timbl.com/timbl/Automation/Library/Mashup/mashlib.js"></script>
+    https://timbl.com/timbl/Automation/Library/Mashup/mashlib.js
     <script type="text/javascript" src="test-form.js"></script>
 </head>
 
