--- a/Documentation/form-examples/demo.html
+++ b/Documentation/form-examples/demo.html
@@ -8,8 +8,8 @@
     <meta http-equiv="Content-Type" content=
             "text/html; charset=us-ascii"/>
 
-    <title>Form fields demo</title>
-    <link type="text/css" rel="stylesheet" href="https://linkeddata.github.io/tabulator-firefox/content/tabbedtab.css"/>
+    <title>Form fields demo zero</title>
+    <link type="text/css" rel="stylesheet" href="https://solid.github.io/mashlib/dist/mash.css"/>
 
     <style type="text/css">
         input {
@@ -63,7 +63,7 @@
 <div class="TabulatorOutline" id='UITestArea'></div>
 
 <h1>Form fields demo</h1>
-<pre id='Prologue'>
+<pre id='Prolog'  style="display: none;">
     @prefix foaf:  &lt;http://xmlns.com/foaf/0.1/&gt;.
     @prefix sched: &lt;http://www.w3.org/ns/pim/schedule#&gt;.
     @prefix cal:   &lt;http://www.w3.org/2002/12/cal/ical#&gt;.
@@ -83,7 +83,7 @@
             "Table of input data values and UI outputs generated">
         <tbody id='TestData'>
 
-        <tr>
+        <tr class="form-demo">
             <td class='input'>
             <pre>
    # A simple form with one text field
@@ -99,7 +99,7 @@ ex:this vcard:fn "Alice" .
         </tr>
 
 
-        <tr>
+        <tr class="form-demo">
             <td class='input'>
             <pre>
     # A simple form with one text field
@@ -114,7 +114,7 @@ ex:this vcard:fn "Alice" .
           </tr>
 
 
-        <tr>
+        <tr class="form-demo">
             <td class='input'>
             <pre>
     # A simple form with one boolean field
@@ -128,7 +128,7 @@ ex:this vcard:fn "Alice" .
             <td class='output'></td>
           </tr>
 
-          <tr>
+          <tr class="form-demo">
               <td class='input'>
               <pre>
       # one Tristate field
@@ -142,7 +142,7 @@ ex:this vcard:fn "Alice" .
               <td class='output'></td>
             </tr>
 
-            <tr>
+            <tr class="form-demo">
                 <td class='input'>
                 <pre>
         # A simple form with one integer field
@@ -156,7 +156,7 @@ ex:this vcard:fn "Alice" .
                 <td class='output'></td>
               </tr>
 
-              <tr>
+              <tr class="form-demo">
                   <td class='input'>
                   <pre>
           # A simple form with one decimal field
@@ -170,7 +170,7 @@ ex:this vcard:fn "Alice" .
                   <td class='output'></td>
                 </tr>
 
-                <tr>
+                <tr class="form-demo">
                     <td class='input'>
                     <pre>
             # A simple form with one floating point field
@@ -187,7 +187,7 @@ ex:this vcard:fn "Alice" .
 
 
 
-          <tr>
+          <tr class="form-demo">
               <td class='input'>
               <pre>
       # A simple form with one color field
@@ -201,7 +201,7 @@ ex:this vcard:fn "Alice" .
               <td class='output'></td>
             </tr>
 
-            <tr>
+            <tr class="form-demo">
                 <td class='input'>
                 <pre>
         # A simple form with one date field
@@ -215,7 +215,7 @@ ex:this vcard:fn "Alice" .
                 <td class='output'></td>
               </tr>
 
-              <tr>
+              <tr class="form-demo">
                   <td class='input'>
                   <pre>
           # A  date-time field
@@ -229,7 +229,7 @@ ex:this vcard:fn "Alice" .
                   <td class='output'></td>
                 </tr>
 
-            <tr>
+            <tr class="form-demo">
                 <td class='input'>
                 <pre>
         # A simple form with one phone field
@@ -243,7 +243,7 @@ ex:this vcard:fn "Alice" .
                 <td class='output'></td>
               </tr>
 
-              <tr>
+              <tr class="form-demo">
                   <td class='input'>
                   <pre>
           # A simple form with one email address field
