Now some examples of strcutures

--- a/Documentation/form-examples/demo.html
+++ b/Documentation/form-examples/demo.html
@@ -8,48 +8,12 @@
     <meta http-equiv="Content-Type" content=
             "text/html; charset=us-ascii"/>
 
-    <title>Form fields demo zero</title>
+    <title>Form fields</title>
     <link type="text/css" rel="stylesheet" href="https://solid.github.io/mashlib/dist/mash.css"/>
 
-    <style type="text/css">
-        input {
-            background-color: #eef;
-            padding: 0.5em;
-            border: .5em solid white;
-            font-size: 120%;
-        }
+    <!-- <script type="text/javascript" src="https://solid.github.io/mashlib/dist/mashlib.js"></script> -->
+    <link type="text/css" rel="stylesheet" href="../style/demo-style.css"/>
 
-        table {
-            border-collapse: collapse;
-        }
-
-        tr.naviMenu {
-            background-color: white;
-        }
-
-        tr.naviMenu td {
-            text-align: middle;
-            vertical-align: middle;
-            padding-top: 4em;
-        }
-
-        table.tbody tr td {
-            padding: 1em;
-            border: 0.1em solid gray;
-        }
-
-        td.input {
-            border-top: 0.1em solid gray;
-            border-right: 0.1em dotted gray;
-            padding: 1em;
-        }
-
-        td.output {
-            border-top: 0.1em solid gray;
-            padding: 1em;
-        }
-    </style><!--
-    <script type="text/javascript" src="https://solid.github.io/mashlib/dist/mashlib.js"></script> -->
     <script type="text/javascript" src="https://timbl.com/timbl/Automation/Library/Mashup/mashlib.js"></script>
     <script type="text/javascript" src="test-form.js"></script>
 </head>
@@ -62,7 +26,7 @@
 
 <div class="TabulatorOutline" id='UITestArea'></div>
 
-<h1>Form fields demo</h1>
+<h1>Form fields</h1>
 <pre id='Prolog'  style="display: none;">
     @prefix foaf:  &lt;http://xmlns.com/foaf/0.1/&gt;.
     @prefix sched: &lt;http://www.w3.org/ns/pim/schedule#&gt;.
