Basic demo now works in 3 column mode

--- a/Documentation/form-examples/profile-demo.html
+++ b/Documentation/form-examples/profile-demo.html
@@ -33,11 +33,12 @@
         <tbody>
 
         <tr class="form-demo">
-            <td class='input' source="https://solid.github.io/solid-panes/src/profile/profileFormText.ttl#this"
-            subject="https://testingsolidos.solidcommunity.net/profile/card#me">
+            <td class='input' source="https://solid.github.io/solid-panes/src/profile/profileFormText.ttl#this">
 
             </td>
-            <td class='output'></td>
+            <td class='target' source="https://testingsolidos.solidcommunity.net/profile/card#me">
+
+            </td> <td class='output'></td>
         </tr>
 
         </tbody>
