--- a/Documentation/form-examples/structures.html
+++ b/Documentation/form-examples/structures.html
@@ -68,7 +68,7 @@ ex:this vcard:fn "Alice";
    vcard:hasEmail  &lt;mailto:alice@example.com&gt; .
 </pre>
             </td>
-            <td class='output'></td>
+            <td class='target'></td> <td class='output'></td>
         </tr>
 
 
@@ -142,7 +142,7 @@ ex:this vcard:fn "Alice";
       ] .
 </pre>
             </td>
-            <td class='output'></td>
+            <td class='target'></td> <td class='output'></td>
         </tr>
 
 
