Fix a link and typo

--- a/Documentation/talks/FormsTalk.html
+++ b/Documentation/talks/FormsTalk.html
@@ -170,6 +170,8 @@ ui:property ex:allDay .
   <li><a target="demo" href="../form-examples/demo.html">Examples of individual Form Fields</a></li>
   <li><a target="demo" href="../form-examples/structures.html">Examples of structues in forms</a></li>
   <li><a target="demo" href="../form-examples/profile-demo.html">Examples of a Solid profile edting form</a></li>
+  <li><a target="demo" href="../form-examples/edit-form.html">Editing a simple form using the Form Form</a></li>
+  <li><a target="demo" href="../form-examples/edit-form-form.html">Editing the Form Form</a></li>
 </ol>
 
 </div>
