--- a/Documentation/talks/FormsTalk.html
+++ b/Documentation/talks/FormsTalk.html
@@ -85,7 +85,7 @@ src="https://solidproject.solidcommunity.net/profile/solid-emblem.svg" /></a></o
         ui:label "name" .
 
         ex:part2 a ui:EmailField ;
-        ui:property vcard:hasEmail; # @@ chcek
+        ui:property vcard:hasEmail;
         ui:label "email" .
 </pre>
 </div>
@@ -235,18 +235,28 @@ ui:property ex:allDay .
 <img src="form-ecosystem.drawio.svg"/>
 </div>
 
-<p>@@ The form of forms</p>
+<p>The Form Form</p>
 <div class="slide">
-<h1>Going meta -- designing forms using the form of forms 2</h1>
-<p>@@ here we are editing the really small form we started with.</p>
+<h1>Going meta -- Editing forms using the form of forms 2</h1>
+<p>Here we are editing the really small form we started with.</p>
+<ul>
+  <li><a target="demo" href="../form-examples/edit-form.html">Editing a simple form using the Form Form</a></li>
+</ul>
+<p>Here we edit the FormForm with itself.</p>
+<ul>
+  <li><a target="demo" href="../form-examples/edit-form-form.html">Editing the Form Form</a></li>
+</ul>
+
 </div>
 
 <div class="slide">
 <h1>Questions?</h1>
 </div>
 <div class="slide">
-<h1>@@ The Autocomplete field</h1>
+<h1>The Autocomplete field</h1>
 <p>This form field allows users to select things from lists in public databases, things like Languages, Organizations, Occupations, and Skills</p>
-<p>This is not covered in this talk, but a later one.</p>
-<p>(Ther is a @@ref blog about is which I could run though if interested)</p>
+<p>This is not covered in this talk.</p>
+<p>(There is a blog <a href="https://solidos.solidcommunity.net/public/2021/01%20Building%20Solid%20Apps%20which%20use%20Public%20Data.html">
+</i>Building Solid Apps which use Public Data</i></a>,
+  about this which I could run though for those interested)</p>
 </div>
