--- a/Documentation/talks/FormsTalk.html
+++ b/Documentation/talks/FormsTalk.html
@@ -144,9 +144,6 @@ src="https://solidproject.solidcommunity.net/profile/solid-emblem.svg" /></a></o
   </li>
 </ul>
 
-<p>See also <a href="https://github.com/jeff-zucker/solid-ui-components/blob/main/Ontology.md">Jeff Zucker's proposals</a> for
-  components for building Apps and parts of Apps like Menus, Tabs, etc.</p>
-
 </div>
 
 <div class="slide">
@@ -248,6 +245,107 @@ ui:property ex:allDay .
 </ul>
 
 </div>
+
+<div class="slide">
+<h1>Forms and Classes</h1>
+<pre>
+export function formsFor (subject) {
+  const kb = store
+
+  log.debug('formsFor: subject=' + subject)
+  const t = kb.findTypeURIs(subject)
+  let t1
+  for (t1 in t) {
+    log.debug('   type: ' + t1)
+  }
+  const bottom = kb.bottomTypeURIs(t) // most specific
+  let candidates = []
+  for (const b in bottom) {
+    // Find the most specific
+    log.debug('candidatesFor: trying bottom type =' + b)
+    candidates = candidates.concat(
+      findClosest(kb, b, ns.ui('creationForm'))
+    )
+    candidates = candidates.concat(
+      findClosest(kb, b, ns.ui('annotationForm'))
+    )
+  }
+  return candidates
+}
+
+</pre>
+</div>
+
+<div class="slide">
+<h1>The Form Pane</h1>
+<p><a href="https://github.com/solid/solid-panes/blob/main/src/form/pane.js">The Form Pane</a></p>
+<pre>
+  icon: UI.icons.iconBase + 'noun_122196.svg',
+
+  name: 'form',
+
+  audience: [ns.solid('PowerUser')],
+
+  // Does the subject deserve this pane?
+  label: function (subject) {
+    const n = UI.widgets.formsFor(subject).length
+    UI.log.debug('Form pane: forms for ' + subject + ': ' + n)
+    if (!n) return null
+    return '' + n + ' forms'
+  },
+
+  render: function (subject, context) {
+  ...
+  }
+</pre>
+
+</div>
+
+
+
+
+<div class="slide">
+<h1>Future: A Form registry?</h1>
+<ul
+<li>A place to list forms for each class. (by Shape?)</li>
+<li>Global one could be say <tt>https://solidos.solidcommunity.net/reg/form</tt></li>
+<li>Users and Communities could have their own, linked from type index</li>
+<li>Idea: Things like global registries are linked from a global community, The Public  which is just like a user and controlled by Solid Project</li>
+</ul>
+</div>
+
+
+<div class="slide">
+<h1>Future</h1>
+<ul>
+  <li>Implementations in  other platforms - MechanicalUI etc, Native mobile...</li>
+  <li>Add new form features -- what can you think of? Things we have code for:
+    <ul>
+      <li>Matrix, Tables</li>
+      <li>Image gallery, collections</li>
+      <li>Drawers, sidebars</li>
+
+    </ul>
+  </li>
+  <li>Allow entire App top be build from RDF-based declarative components
+     <a href="https://github.com/jeff-zucker/solid-ui-components/blob/main/Ontology.md">a la JeffZ</a>
+     <ul>
+       <li>The App</li>
+       <li>Navigation</li>
+       <li>Menus</li>
+       <li>HTML templates</li>
+       <li>Style themes</li>
+       <li>etc.</li>
+     </ul>
+   </li>
+   <ul>Integrate with Ontologies
+     <li>Design/Edit Ontologies with forms</li>
+     <li>Browse and pick for existing ontologies when building a form</li>
+   </ul>
+</ul>
+</div>
+
+
 
 <div class="slide">
 <h1>Questions?</h1>
