link to new material

--- a/Documentation/talks/FormsTalk.html
+++ b/Documentation/talks/FormsTalk.html
@@ -167,6 +167,7 @@ ui:property ex:allDay .
 <ol>
   <li><a target="demo" href="../form-examples/demo.html">Examples of individual Form Fields</a></li>
   <li><a target="demo" href="../form-examples/structures.html">Examples of structures in forms</a></li>
+  <li><a target="demo" href="../form-examples/structures3.html">Examples of structures in forms</a></li>
   <li><a target="demo" href="../form-examples/profile-demo.html">Examples of a Solid profile ediiting form</a></li>
   <!--
   <li><a target="demo" href="../form-examples/edit-form.html">Editing a simple form using the Form Form</a></li>
@@ -360,4 +361,5 @@ export function formsFor (subject) {
 <p>(There is a blog <a href="https://solidos.solidcommunity.net/public/2021/01%20Building%20Solid%20Apps%20which%20use%20Public%20Data.html">
 </i>Building Solid Apps which use Public Data</i></a>,
   about this which I could run though for those interested)</p>
+  <img src="../diagrams/PersonalPublicDataLinks.svg" />
 </div>
