tweak link text

--- a/Documentation/talks/FormsTalk.html
+++ b/Documentation/talks/FormsTalk.html
@@ -166,8 +166,8 @@ ui:property ex:allDay .
 
 <ol>
   <li><a target="demo" href="../form-examples/demo.html">Examples of individual Form Fields</a></li>
-  <li><a target="demo" href="../form-examples/structures.html">Examples of structures in forms</a></li>
-  <li><a target="demo" href="../form-examples/structures3.html">Examples of structures in forms</a></li>
+  <li><a target="demo" href="../form-examples/structures.html">Examples of structures in forms: Groups</a></li>
+  <li><a target="demo" href="../form-examples/structures3.html">Selection, Options, Autocomplete</a></li>
   <li><a target="demo" href="../form-examples/profile-demo.html">Examples of a Solid profile ediiting form</a></li>
   <!--
   <li><a target="demo" href="../form-examples/edit-form.html">Editing a simple form using the Form Form</a></li>
