Update Documentation/talks/FormsTalk.html thanks @TallTed
Co-authored-by: Ted Thibodeau Jr <tthibodeau@openlinksw.com>

--- a/Documentation/talks/FormsTalk.html
+++ b/Documentation/talks/FormsTalk.html
@@ -168,7 +168,7 @@ ui:property ex:allDay .
   <li><a target="demo" href="../form-examples/demo.html">Examples of individual Form Fields</a></li>
   <li><a target="demo" href="../form-examples/structures.html">Examples of structures in forms: Groups</a></li>
   <li><a target="demo" href="../form-examples/structures3.html">Selection, Options, Autocomplete</a></li>
-  <li><a target="demo" href="../form-examples/profile-demo.html">Examples of a Solid profile ediiting form</a></li>
+  <li><a target="demo" href="../form-examples/profile-demo.html">Examples of a Solid profile editing form</a></li>
   <!--
   <li><a target="demo" href="../form-examples/edit-form.html">Editing a simple form using the Form Form</a></li>
   <li><a target="demo" href="../form-examples/edit-form-form.html">Editing the Form Form</a></li>
