deploy: 7186b14f1e848145ad9f9616b8d690a2d6e807bc

--- a/Documentation/talks/FormsTalk.html
+++ b/Documentation/talks/FormsTalk.html
@@ -63,9 +63,10 @@ src="https://solidproject.solidcommunity.net/profile/solid-emblem.svg" /></a></o
 <h1>Declarative User Interface: Forms and Apps in RDF</h1>
 
 <ul>
-<li>Declaratve design is good.</li>
+<li>Declarative design is good.</li>
+<li>The Principle of Least Power</li>
 <li>Compose apps and parts of apps out of <b>components</b></li>
-<li>High-level design allows <b>multiple</b> compaitible implementations</li>
+<li>High-level design allows <b>multiple</b> compatible implementations</li>
 <li>In Solid, data is in Linked Data graphs</li>
 <li>Why not use that for User Interface?</li>
 </ul>
@@ -165,10 +166,13 @@ ui:property ex:allDay .
 
 <ol>
   <li><a target="demo" href="../form-examples/demo.html">Examples of individual Form Fields</a></li>
-  <li><a target="demo" href="../form-examples/structures.html">Examples of structues in forms</a></li>
-  <li><a target="demo" href="../form-examples/profile-demo.html">Examples of a Solid profile edting form</a></li>
+  <li><a target="demo" href="../form-examples/structures.html">Examples of structures in forms: Groups</a></li>
+  <li><a target="demo" href="../form-examples/structures3.html">Selection, Options, Autocomplete</a></li>
+  <li><a target="demo" href="../form-examples/profile-demo.html">Examples of a Solid profile editing form</a></li>
+  <!--
   <li><a target="demo" href="../form-examples/edit-form.html">Editing a simple form using the Form Form</a></li>
   <li><a target="demo" href="../form-examples/edit-form-form.html">Editing the Form Form</a></li>
+-->
 </ol>
 
 </div>
@@ -357,4 +361,5 @@ export function formsFor (subject) {
 <p>(There is a blog <a href="https://solidos.solidcommunity.net/public/2021/01%20Building%20Solid%20Apps%20which%20use%20Public%20Data.html">
 </i>Building Solid Apps which use Public Data</i></a>,
   about this which I could run though for those interested)</p>
+  <img src="../diagrams/PersonalPublicDataLinks.svg" />
 </div>
